Lucifer2416.github.io

--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
 							<section class="alt">
 								<h3>Address</h3>
 								<p> 
-								Montreal,Qc H3S1J6</p>
+								<b>Montreal,Qc.</b></p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(514) 578-2405</a></p>
+								<p><b>(514) 578-2405</b></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mit_2405@icloud.com</a></p>
+								<p><b>mit_2405@icloud.com</b></p>
 							</section>
 							<section>
 								<h3>Social</h3>
